force-app/main/default/objects/VS_Error_Log__c/VS_Error_Log__c.object-meta.xml
<CustomObject>
    <label>VS Error Log</label>
    <pluralLabel>VS Error Logs</pluralLabel>
    <description>VS-ERRLOG enabler object (unticketed gap, see D-new-a). A minimal, decoupled fault-path landing zone for record-triggered/scheduled Flows (VS-03 existing screen flow, VS-19 upcoming confirmation flow, and future flows) to log errors from their fault connectors. No lookups by design so any context can log without a relationship dependency. OWD Private (design intent: only admins/support review errors; not a citizen- or facility-visible object). No Aadhaar or other personal data may be written to VS_Message__c or VS_Context__c.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>