force-app/main/default/objects/VS_Error_Log__c/fields/VS_Context__c.field-meta.xml
<CustomField>
    <fullName>VS_Context__c</fullName>
    <label>Context</label>
    <description>Where the error happened: Flow API name or Apex class/method plus the step/element name, e.g. "VS_Appointment_AfterSave_SendConfirmation / Send SMS Action". Used to triage without opening the source metadata.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>