force-app/main/default/objects/VS_Error_Log__c/fields/VS_Logged_At__c.field-meta.xml
<CustomField>
    <fullName>VS_Logged_At__c</fullName>
    <label>Logged At</label>
    <description>Timestamp the error was written, set by the logging flow/action (typically $Flow.CurrentDateTime or Now()) rather than relying solely on CreatedDate, so the value is explicit and portable if records are ever migrated.</description>
    <type>DateTime</type>
</CustomField>