force-app/main/default/objects/VS_Error_Log__c/fields/VS_Message__c.field-meta.xml
<CustomField>
    <fullName>VS_Message__c</fullName>
    <label>Message</label>
    <description>The error message or fault detail captured from the flow fault connector or Apex exception. Must never contain Aadhaar or other personal data beyond what the platform error text itself includes (Annexure C1) — callers should sanitize before logging.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>