force-app/main/default/objects/VS_Error_Log__c/fields/VS_Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>VS_Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <description>The 18-character Id of the record under operation when the error occurred (e.g. the VS_Appointment__c or VS_Session__c Id), if applicable. Plain text, not a lookup, so this object stays decoupled and loggable from any object context. Nullable — some faults (e.g. scheduled flow with no record context) have none.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>