force-app/main/default/objects/VS_Error_Log__c/fields/VS_Severity__c.field-meta.xml
<CustomField>
    <fullName>VS_Severity__c</fullName>
    <label>Severity</label>
    <description>Severity of the logged event. Values: Info, Warning, Error. Defaults to Error since most fault-connector writes represent a failed automation step; Info/Warning are available for future non-fault diagnostic logging.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>